--- a/01-intro.adoc
+++ b/01-intro.adoc
@@ -10,8 +10,7 @@
 === Who are you even?
 
 * Stefan Joosten
-* (LOGO HERE) link:https://www.atcomputing.nl[AT Computing]
-* Family
+* link:https://www.atcomputing.nl[AT Computing]
 * Volunteer at link:https://www.homecomputermuseum.nl[HomeComputerMuseum]
 
 [.notes]
