Slight change to whoami heading

--- a/01-intro.adoc
+++ b/01-intro.adoc
@@ -7,7 +7,7 @@
 * How I got on with it
 
 
-=== Who are you even?
+=== Who are you?
 
 * Stefan Joosten
 * link:https://www.atcomputing.nl[AT Computing]
