--- a/presentation.adoc
+++ b/presentation.adoc
@@ -3,7 +3,7 @@
 :revealjs_width: 1040
 :source-highlighter: highlight.js
 :author: Stefan Joosten <stefan@atcomputing.nl>
-:date: 2024-01-09
+:date: 2024-02-06
 :imagesdir: images/
 
 include::footer.adoc[]
@@ -20,6 +20,10 @@ include::05-administer.adoc[]
 
 include::06-custom-repo.adoc[]
 
+include::07-future.adoc[]
+
 == Thank you!
 
-Questions?
+And I would like to thank the Pulp developers!
+
+Any questions / remarks?
