--- a/03-ansible.adoc
+++ b/03-ansible.adoc
@@ -18,4 +18,4 @@ Infrastructure mostly managed by Ansible.
 
 Ansible Collection `pulp.squeezer`
 
-Not much information, but sufficient to get started.
+Not much information, but sufficient to get started!
